fix:remove #events width to fix horizontal scrollbar

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -174,7 +174,6 @@ header:has(#menu:not(:checked)) ~ nav {
 }
 
 #events {
-  width: 100vw;
   display: grid;
   grid-template: repeat(4, 1fr) / 2em 1fr;
   gap: 0;
